fix: Spacing buttons

--- a/ui/src/app/components/address-form/address-form.component.scss
+++ b/ui/src/app/components/address-form/address-form.component.scss
@@ -2,9 +2,8 @@
   width: 100%;
 }
 
-.shipping-card {
-  min-width: 120px;
-  margin: 20px auto;
+.button {
+  margin: 4px;
 }
 
 .mat-radio-button {
